# slint_android_app

./: AndroidManifest.xml  Cargo.toml  ui.slint
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
android/src/main/java/com/example/gpstracker/: GPSListener.java  LocationListener.kt  MainActivity.kt
src/: lib.rs  main.rs
ui/: mainwindow.slint
